# voxel-game-opengl

./: CMakeLists.txt  Shader.cpp  Shader.h  ShaderEffect.cpp  ShaderEffect.h  Voxel.cpp  Voxel.h  glad.c  main.cpp
shaders/frag/: textureVoxel.frag
shaders/vertex/: flat.vert  rotate.vert  voxel.vert
